# pyLIM

./: .gitignore  README.md  example_script.ipynb  namelist.py  setup.cfg  setup.py
src/pyLIM/: __init__.py  dataset.py  driver.py  environment.yml  model.py  plot.py  tools.py  verif.py
