[metadata]
name = LIM_CPC
version = 0.1.1
description = Package for linear inverse model training and running
long_description = file: README.md
long_description_content_type = text/markdown
author = Sam Lillo
platform = any
keywords = meteorology, weather
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Science/Research
    Operating System :: OS Independent
url = https://github.com/splillo/LIM_CPC
project_urls =
    Documentation = 
    Source Code = https://github.com/splillo/pyLIM

[options]
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires = setuptools_scm
python_requires = >=3.7
install_requires =
	matplotlib >= 2.2.2
	numpy >= 1.14.3
	scipy >= 1.1.0
	xarray >= 0.10.7
	global_land_mask >= 1.0.0

[options.packages.find]
where = src
